--- a/index.html
+++ b/index.html
@@ -1,78 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Meu Portfólio | Alura</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"/>
-<style>
-body {
-font-family: 'Roboto', sans-serif;
-margin: 0;
-padding: 0;
-background-color: #f4f4f4;
-color: #333;
-}
-header {
-background-color: #007acc;
-color: white;
-padding: 2rem;
-text-align: center;
-}
-main {
-padding: 2rem;
-max-width: 1000px;
-margin: auto;
-}
-.projeto {
-background-color: white;
-padding: 1rem;
-margin-bottom: 1.5rem;
-border-radius: 8px;
-box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-.projeto h2 {
-margin-top: 0;
-}
-footer {
-text-align: center;
-padding: 1rem;
-background-color: #ddd;
-margin-top: 2rem;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio de Raquel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1>Meu Portfólio</h1>
-<p>Projetos desenvolvidos nos cursos da Alura</p>
-</header>
+    <header class="container text-center mt-5">
+        <img src="img/avatar-perfil.png" alt="Avatar de Raquel" class="rounded-circle mb-3" width="150" height="150">
+        <p class="lead">Olá! Eu sou Raquel_</p>
+        <h1>Bem-vindos ao meu mundo criativo</h1>
+        <p class="mb-4">Adoro mergulhar em boas músicas, maratonar séries, me emocionar com filmes e me dedicar aos meus hobbies favoritos.</p>
+    </header>
 
-<main>
-<section class="projeto">
-<h2>Projeto 1 - Musicas favoritas</h2>
-<p>Eu amo ouvir musicas pop.</p>
-<a href="https://editor.p5js.org/00001134764832sp/sketches/nZIxUrqaJ" target="_blank">Ver projeto</a>
-</section>
+    <main class="container mt-5">
+        <section>
+            <h2 class="mb-4">Meus projetos favoritos</h2>
+            <div class="row g-4">
+                <!-- Projeto 1 -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="img/projeto-1.png" class="card-img-top" alt="Imagem de um projeto">
+                        <div class="card-body">
+                            <h5 class="card-title">Minha Biblioteca Visual</h5>
+                            <p class="card-text">Um site simples onde compartilho meus livros favoritos com imagens, autores e links para leitura.</p>
+                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja mais</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Projeto 2 -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="img/projeto-2.png" class="card-img-top" alt="Imagem de um projeto">
+                        <div class="card-body">
+                            <h5 class="card-title">Histórias Interativas</h5>
+                            <p class="card-text">Narrativas com escolhas sobre futuros alternativos, tecnologia e dilemas humanos.</p>
+                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja mais</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Projeto 3 -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="img/projeto-3.png" class="card-img-top" alt="Imagem de um projeto">
+                        <div class="card-body">
+                            <h5 class="card-title">Explorando o Universo</h5>
+                            <p class="card-text">Uma experiência visual sobre o cosmos, com constelações e descobertas espaciais.</p>
+                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja mais</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-<section class="projeto">
-<h2>Projeto 2 - Jogo de corrida</h2>
-<p>No projeto de corrida ppodemos competir e ver quem ganha primeiro, utilizamos o psj5.</p>
-<a href="https://editor.p5js.org/00001134764832sp/sketches/E-EmMeM0M" target="_blank">Ver projeto</a>
-</section>
-<section class="projeto">
-<h2>Projeto 3 - Quente Frio</h2>
-<p>No projeto vemos como funiciona o quente e frio com a mudança de cor da bolinha, utilizamos o psj5.</p>
-<a href="https://editor.p5js.org/00001134764832sp/sketches/V80a87hgQ" target="_blank">Ver projeto</a>
-</section>
+    <!-- Modais -->
+    <div class="modal fade" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Minha Biblioteca Visual</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Esse projeto mostra alguns dos meus livros preferidos. Um espaço para expressar meus gostos literários com visual leve e agradável.</p>
+                    <img src="img/projeto-1.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
-<!-- Adicione mais projetos conforme necessário -->
-</main>
+    <div class="modal fade" id="modal2" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Histórias Interativas</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Um projeto baseado em escolhas onde você define os rumos de histórias envolvendo o futuro e o ser humano.</p>
+                    <img src="img/projeto-2.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
-<footer>
-<p>Desenvolvido por [Raquel] | Alura</p>
-</footer>
+    <div class="modal fade" id="modal3" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Explorando o Universo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Esse projeto visual convida você a viajar por estrelas, planetas e constelações. Uma homenagem ao meu amor pelo espaço.</p>
+                    <img src="img/projeto-3.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Rodapé -->
+    <footer class="container text-center py-5">
+        <p>© 2024. Criado por Raquel com ♥</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
-
-<img src="https://i.imgur.com/seuLinkAqui.jpg" alt="Minha foto" style="width: 250px; border-radius: 50%;" />
+</html> 
