--- a/index.html
+++ b/index.html
@@ -1,113 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Raquel</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meu Portfólio Pessoal</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="container text-center mt-5">
-        <img src="img/avatar-perfil.png" alt="Avatar de Raquel" class="rounded-circle mb-3" width="150" height="150">
-        <p class="lead">Olá! Eu sou Raquel_</p>
-        <h1>Bem-vindos ao meu mundo criativo</h1>
-        <p class="mb-4">Adoro mergulhar em boas músicas, maratonar séries, me emocionar com filmes e me dedicar aos meus hobbies favoritos.</p>
-    </header>
+  <header>
+    <h1>Olá! Eu sou [Seu Nome]</h1>
+    <p>Bem-vindo ao meu espaço pessoal 🎧🎸🎮</p>
+  </header>
 
-    <main class="container mt-5">
-        <section>
-            <h2 class="mb-4">Meus projetos favoritos</h2>
-            <div class="row g-4">
-                <!-- Projeto 1 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="img/projeto-1.png" class="card-img-top" alt="Imagem de um projeto">
-                        <div class="card-body">
-                            <h5 class="card-title">Minha Biblioteca Visual</h5>
-                            <p class="card-text">Um site simples onde compartilho meus livros favoritos com imagens, autores e links para leitura.</p>
-                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja mais</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Projeto 2 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="img/projeto-2.png" class="card-img-top" alt="Imagem de um projeto">
-                        <div class="card-body">
-                            <h5 class="card-title">Histórias Interativas</h5>
-                            <p class="card-text">Narrativas com escolhas sobre futuros alternativos, tecnologia e dilemas humanos.</p>
-                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja mais</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Projeto 3 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="img/projeto-3.png" class="card-img-top" alt="Imagem de um projeto">
-                        <div class="card-body">
-                            <h5 class="card-title">Explorando o Universo</h5>
-                            <p class="card-text">Uma experiência visual sobre o cosmos, com constelações e descobertas espaciais.</p>
-                            <button class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja mais</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+  <section class="sobre">
+    <h2>Sobre mim</h2>
+    <p>Sou apaixonado por música, cultura pop, tecnologia e momentos simples da vida. Adoro descobrir novas bandas, tocar instrumentos e explorar novos sons.</p>
+  </section>
 
-    <!-- Modais -->
-    <div class="modal fade" id="modal1" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca Visual</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Esse projeto mostra alguns dos meus livros preferidos. Um espaço para expressar meus gostos literários com visual leve e agradável.</p>
-                    <img src="img/projeto-1.png" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+  <section class="hobbies">
+    <h2>🎯 Meus Hobbies</h2>
+    <ul>
+      <li>🎸 Tocar violão e guitarra</li>
+      <li>🎮 Jogar videogame (RPGs e Indies)</li>
+      <li>🎨 Desenhar e editar imagens</li>
+      <li>📚 Ler mangás e livros de fantasia</li>
+      <li>🌎 Aprender sobre culturas diferentes</li>
+    </ul>
+  </section>
 
-    <div class="modal fade" id="modal2" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Histórias Interativas</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Um projeto baseado em escolhas onde você define os rumos de histórias envolvendo o futuro e o ser humano.</p>
-                    <img src="img/projeto-2.png" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+  <section class="musica">
+    <h2>🎵 Gosto Musical</h2>
+    <p>Escuto de tudo um pouco, mas tenho uma queda por:</p>
+    <ul>
+      <li>Rock alternativo</li>
+      <li>Indie Pop/Rock</li>
+      <li>Lo-fi e Chillhop</li>
+      <li>Música instrumental</li>
+      <li>Clássicos dos anos 80 e 90</li>
+    </ul>
+  </section>
 
-    <div class="modal fade" id="modal3" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Explorando o Universo</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Esse projeto visual convida você a viajar por estrelas, planetas e constelações. Uma homenagem ao meu amor pelo espaço.</p>
-                    <img src="img/projeto-3.png" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+  <section class="playlist">
+    <h2>🎧 Minha Playlist Favorita</h2>
+    <p>Algumas músicas que sempre me inspiram:</p>
+    <ol>
+      <li>Imagine Dragons – Demons</li>
+      <li>Arctic Monkeys – Do I Wanna Know?</li>
+      <li>Joji – Glimpse of Us</li>
+      <li>Ludovico Einaudi – Nuvole Bianche</li>
+      <li>Mac DeMarco – Chamber of Reflection</li>
+    </ol>
+  </section>
 
-    <!-- Rodapé -->
-    <footer class="container text-center py-5">
-        <p>© 2024. Criado por Raquel com ♥</p>
-    </footer>
+  <footer>
+    <p>Feito com 💙 no VSCode por [Seu Nome]</p>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
-</html> 
+</html>
