--- a/index.html
+++ b/index.html
@@ -8,35 +8,33 @@
 </head>
 <body>
   <header>
-    <h1>Olá! Eu sou [Seu Nome]</h1>
-    <p>Bem-vindo ao meu espaço pessoal 🎧🎸🎮</p>
+    <h1>Olá! Eu sou Raquel</h1>
+    <p>Bem-vindo ao meu espaço pessoal 🎧🎤💃</p>
   </header>
 
   <section class="sobre">
     <h2>Sobre mim</h2>
-    <p>Sou apaixonado por música, cultura pop, tecnologia e momentos simples da vida. Adoro descobrir novas bandas, tocar instrumentos e explorar novos sons.</p>
+    <p>Sou apaixonado por música, cultura pop, tecnologia e momentos simples da vida. Adoro descobrir novas bandas, cantar, dançar e explorar novos sons.</p>
   </section>
 
   <section class="hobbies">
     <h2>🎯 Meus Hobbies</h2>
     <ul>
-      <li>🎸 Tocar violão e guitarra</li>
-      <li>🎮 Jogar videogame (RPGs e Indies)</li>
-      <li>🎨 Desenhar e editar imagens</li>
-      <li>📚 Ler mangás e livros de fantasia</li>
+      <li>🎤 Cantar e dançar</li>
+      <li>🕹️ Jogar jogos emotivamente</li>
+      <li>🎨 Colorir</li>
+      <li>📺 Assistir séries</li>
       <li>🌎 Aprender sobre culturas diferentes</li>
     </ul>
   </section>
 
   <section class="musica">
     <h2>🎵 Gosto Musical</h2>
-    <p>Escuto de tudo um pouco, mas tenho uma queda por:</p>
+    <p>Escuto principalmente:</p>
     <ul>
-      <li>Rock alternativo</li>
-      <li>Indie Pop/Rock</li>
-      <li>Lo-fi e Chillhop</li>
-      <li>Música instrumental</li>
-      <li>Clássicos dos anos 80 e 90</li>
+      <li>Pop</li>
+      <li>K-pop</li>
+      <li>Música contemporânea</li>
     </ul>
   </section>
 
@@ -44,17 +42,16 @@
     <h2>🎧 Minha Playlist Favorita</h2>
     <p>Algumas músicas que sempre me inspiram:</p>
     <ol>
-      <li>Imagine Dragons – Demons</li>
-      <li>Arctic Monkeys – Do I Wanna Know?</li>
-      <li>Joji – Glimpse of Us</li>
-      <li>Ludovico Einaudi – Nuvole Bianche</li>
-      <li>Mac DeMarco – Chamber of Reflection</li>
+      <li>Imagine Dragons – Believe It</li>
+      <li>BLACKPINK – How Like That</li>
+      <li>Tate McCrae, Exes</li>
+      <li>Baby – Justin Biber</li>
+      <li>Tate Mcrae – Greedy</li>
     </ol>
   </section>
 
   <footer>
-    <p>Feito com 💙 no VSCode por [Seu Nome]</p>
-  </footer>
+    <p>Feito com 💙 no VSCode por Raquel
 
   <script src="script.js"></script>
 </body>
